--- a/index.html
+++ b/index.html
@@ -37,60 +37,87 @@
         target="_blank"
         class="memory"
       >
-        <small>20 de Março de 2023</small>
-        <h1>Jornada do Zero à Primeira Vaga</h1>
+        <small>18 de Abril de 2017</small>
+        <h1>Parque dos Macaquinhos Caxias do Sul - RS</h1>
         <div>
-          <img
-            src="./assets/jornada.png"
-            alt="Rodrigo e Mayk apresentando o evento jornada do Zero à Primeira Vaga"
-          />
+          <img src="./assets/jornada3.jpg" alt="Ollie Gustavo Duso" />
         </div>
-        <p>
-          At vero eos et accusamus et iusto odio dignissimos ducimus qui
-          blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-          et quas molestias excepturi sint occaecati cupiditate non provident,
-          similique...
-        </p>
+        <p>Ollie na base</p>
       </a>
       <a
         href="https://www.youtube.com/watch?v=3nz5HkUJaVU&pp=ygUfam9ybmFkYSBkbyB6ZXJvIGEgcHJpbWVpcmEgdmFnYQ%3D%3D"
         target="_blank"
         class="memory"
       >
-        <small>20 de Março de 2023</small>
-        <h1>Jornada do Zero à Primeira Vaga</h1>
+        <small>15 de Março de 2016</small>
+        <h1>Barra da Lagoa - SC</h1>
         <div>
           <img
-            src="./assets/jornada.png"
-            alt="Rodrigo e Mayk apresentando o evento jornada do Zero à Primeira Vaga"
+            src="./assets/jornada7.jpg"
+            alt="Barra da Lagoa - Florianópolis SC"
           />
         </div>
-        <p>
-          At vero eos et accusamus et iusto odio dignissimos ducimus qui
-          blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-          et quas molestias excepturi sint occaecati cupiditate non provident,
-          similique...
-        </p>
+        <p>Trilha na Barra da Lagoa</p>
       </a>
       <a
         href="https://www.youtube.com/watch?v=3nz5HkUJaVU&pp=ygUfam9ybmFkYSBkbyB6ZXJvIGEgcHJpbWVpcmEgdmFnYQ%3D%3D"
         target="_blank"
         class="memory"
       >
-        <small>20 de Março de 2023</small>
-        <h1>Jornada do Zero à Primeira Vaga</h1>
+        <small>15 de Novembro de 2016</small>
+        <h1>Barra da Lagoa - SC</h1>
         <div>
-          <img
-            src="./assets/jornada.png"
-            alt="Rodrigo e Mayk apresentando o evento jornada do Zero à Primeira Vaga"
-          />
+          <img src="./assets/jornada10.JPG" alt="Surf na barra" />
         </div>
-        <p>
-          At vero eos et accusamus et iusto odio dignissimos ducimus qui
-          blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-          et quas molestias excepturi sint occaecati cupiditate non provident,
-          similique...
-        </p>
+        <p>Surf na barra da Lagoa de longboard</p>
+      </a>
+      <a
+        href="https://www.youtube.com/watch?v=3nz5HkUJaVU&pp=ygUfam9ybmFkYSBkbyB6ZXJvIGEgcHJpbWVpcmEgdmFnYQ%3D%3D"
+        target="_blank"
+        class="memory"
+      >
+        <small>20 de Junho de 2016</small>
+        <h1>Caxias do Sul - RS</h1>
+        <div>
+          <img src="./assets/jornada2.JPG" alt="Nas alturas" />
+        </div>
+        <p>Nas Alturas</p>
+      </a>
+      <a
+        href="https://www.youtube.com/watch?v=3nz5HkUJaVU&pp=ygUfam9ybmFkYSBkbyB6ZXJvIGEgcHJpbWVpcmEgdmFnYQ%3D%3D"
+        target="_blank"
+        class="memory"
+      >
+        <small>02 de Fevereiro de 2017</small>
+        <h1>Prefeitura de Caxias do Sul - RS</h1>
+        <div>
+          <img src="./assets/jornada6.jpg" alt="Ollie Gustavo Duso" />
+        </div>
+        <p>Ollie sobre banco</p>
+      </a>
+      <a
+        href="https://www.youtube.com/watch?v=3nz5HkUJaVU&pp=ygUfam9ybmFkYSBkbyB6ZXJvIGEgcHJpbWVpcmEgdmFnYQ%3D%3D"
+        target="_blank"
+        class="memory"
+      >
+        <small>18 de Maio de 2016</small>
+        <h1>Prefeitura de Caxias do Sul - RS</h1>
+        <div>
+          <img src="./assets/jornada5.jpg" alt="Rockslide Gustavo Duso" />
+        </div>
+        <p>FS Rock Slide no corrimão</p>
+      </a>
+      <a
+        href="https://www.youtube.com/watch?v=3nz5HkUJaVU&pp=ygUfam9ybmFkYSBkbyB6ZXJvIGEgcHJpbWVpcmEgdmFnYQ%3D%3D"
+        target="_blank"
+        class="memory"
+      >
+        <small>18 de Abril de 2017</small>
+        <h1>Praia da Armação - SC</h1>
+        <div>
+          <img src="./assets/jornada1.jpg" alt="Praia da Armação" />
+        </div>
+        <p>Armação, Sul da Ilha</p>
       </a>
     </nav>
   </body>
