--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
         target="_blank"
         class="memory"
       >
-        <small>18 de Abril de 2017</small>
-        <h1>Praia da Armação - SC</h1>
+        <small>18 de Maio de 2016</small>
+        <h1>Prefeitura de Caxias do Sul - RS</h1>
         <div>
-          <img src="./assets/jornada11.jpg" alt="Praia da Armação" />
+          <img src="./assets/jornada11.JPG" alt="Praia da Armação" />
         </div>
-        <p>Armação, Sul da Ilha</p>
+        <p>Praia da Armação - SC</p>
       </a>
     </nav>
   </body>
