adjust end title

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         class="memory"
       >
         <small>18 de Maio de 2016</small>
-        <h1>Praia da Armação - RS</h1>
+        <h1>Praia da Armação - SC</h1>
         <div>
           <img src="./assets/jornada11.JPG" alt="Praia da Armação" />
         </div>
